--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "gulp-posthtml": "^1.1.0",
     "jscs": "^1.13.1",
     "jshint": "^2.8.0",
-    "posthtml-custom-elements": "^1.0.2",
-    "posthtml-doctype": "^0.1.0"
+    "posthtml-custom-elements": "^1.0.2"
   },
   "scripts": {
     "lint": "jshint . && jscs . -v"
