--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "gulp-posthtml": "^1.2.1",
     "jscs": "^1.13.1",
     "jshint": "^2.8.0",
-    "posthtml-custom-elements": "^1.0.2"
+    "posthtml-custom-elements": "^1.0.2",
+    "posthtml-doctype": "^1.1.0",
+    "posthtml-textr": "^1.0.4",
+    "typographic-ellipses": "^1.0.11",
+    "typographic-single-spaces": "^1.0.2"
   },
   "scripts": {
     "lint": "jshint . && jscs . -v"
