--- a/package.json
+++ b/package.json
@@ -3,18 +3,11 @@
   "version": "1.0.0",
   "description": "PostHTML Project Stub",
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-posthtml": "^1.3.0",
     "jscs": "^1.13.1",
     "jshint": "^2.8.0",
-    "posthtml-bem": "^0.1.1",
-    "posthtml-custom-elements": "^1.0.2",
-    "posthtml-doctype": "^1.1.0",
-    "posthtml-retext": "^0.1.0",
-    "posthtml-textr": "^1.0.4",
-    "retext-emoji": "^1.0.0",
-    "retext-smartypants": "^1.0.0",
-    "typographic-single-spaces": "^1.0.2"
+    "posthtml": "^0.5.0",
+    "posthtml-static-react": "^1.0.0",
+    "react": "^0.14.0"
   },
   "scripts": {
     "lint": "jshint . && jscs . -v"
